--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ header {
 	border-radius: 8px;
 	border: 2px solid #007CB8;
 	background-color: #007CB8;
+	cursor: pointer;
 }
 
 .fillerContent {
